<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_outline_photo_camera_24dp"
        android:title="@string/title_camera" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_outline_settings_24dp"
        android:title="@string/title_setting" />

</menu>